Fixed horizontal scrollbar appearing  on small desktop sizes

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,7 @@ body {
 
 /*Pages*/
 section.page{
-  padding: 4rem 1rem;
+  padding: 4rem 0.9rem;
   overflow: hidden;
 }
 
